--- a/Idea_collection_system/static/profile.html
+++ b/Idea_collection_system/static/profile.html
@@ -49,16 +49,11 @@
                     <p>Stats</p>
                 </div>
             </a>
-            <a href="chat.html">
-                <div class="nav-item">
-                    <i class="fas fa-bell"></i>
-                    <p>Messages</p>
-                </div>
-            </a>
+
         </nav>
 
         <div class="user-info">
-            <img src="profile.jpg" alt="">
+            <img src="./images/profile.jpg" alt="">
             <p>Chikondi Banda</p>
 
             <a href="login.html">Log out</a>
