--- a/Idea_collection_system/static/signup/staff.html
+++ b/Idea_collection_system/static/signup/staff.html
@@ -16,8 +16,14 @@
                   <h1>Create an account</h1>
                   <hr>
                   <br>
-                  <label for="Name" style="text-align:center;font-size:25PX;"><b>Name</b></label>
-                  <input type="text" placeholder="Enter your name" name="name" required>
+                  <label for="Username" style="text-align:center;font-size:20PX;"><b>Username</b></label>
+                  <input type="text" placeholder="Enter a Username" name="Username" required>
+                  <br>
+                  <label for="FirstName" style="text-align:center;font-size:20PX;"><b>FirstName</b></label>
+                  <input type="text" placeholder="Enter your FirstName" name="FirstName" required>
+                  <br>
+                  <label for="LastName" style="text-align:center;font-size:20PX;"><b>LastName</b></label>
+                  <input type="text" placeholder="Enter your LastName" name="LastName" required>
                   <br>
                   <label for="email" style="text-align:center;font-size:20PX;"><b>Email</b></label>
                   <input type="text" placeholder="Enter your email" name="email" required>
