--- a/Idea_collection_system/static/ideas.html
+++ b/Idea_collection_system/static/ideas.html
@@ -99,16 +99,11 @@
                     <p>Stats</p>
                 </div>
             </a>
-            <a href="chat.html">
-                <div class="nav-item">
-                    <i class="fas fa-bell"></i>
-                    <p>Messages</p>
-                </div>
-            </a>
+
         </nav>
 
         <div class="user-info">
-            <img src="profile.jpg" alt="">
+            <img src="./images/profile.jpg" alt="">
             <p>Chikondi Banda</p>
 
         </div>
