--- a/Idea_collection_system/static/login.html
+++ b/Idea_collection_system/static/login.html
@@ -13,28 +13,15 @@
     <form class="login-form">
       <br>
       <br>
-      <h1>Login </h1>
+      <h1>Login </h1><br><br>
+      <h2>Enter your credentials: </h2><br>
       <hr>
-      <br>
-      <label for="Name" style="font-size:20PX;"><b>Name</b></label>
-      <input type="text" placeholder="Enter your name" name="name" required>
-      <br>
-      <label for="email" style="text-align:center;font-size:20PX;"><b>Email</b></label>
-      <input type="text" placeholder="Enter your email" name="email" required>
+      <br><br>
+      <label for="Name" style="font-size:20PX;"><b>username</b></label>
+      <input type="text" placeholder="Enter your username" name="username" required>
       <br>
       <label for="psw" style="text-align:center;font-size:20PX;"><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="psw" required>
-      <br>
-      <label for="psw" style="text-align:center;font-size:20PX;"><b>Country: </b></label>
-      <br>
-      <input class="dropdown" placeholder="pick the items" list="browsers" name="browser" id="browser" required>
-      <datalist id="browsers">
-        <option value="school of business">
-        <option value="school of social science">
-        <option value="school of computing">
-        <option value="technology and applied science ">
-      </datalist>
-      <br>
       <br>
       <button type="submit" action="  " class="btn">
         <a href="profile.html">
