--- a/Idea_collection_system/static/stats.html
+++ b/Idea_collection_system/static/stats.html
@@ -129,16 +129,10 @@
                     <p>Stats</p>
                 </div>
             </a>
-            <a href="#">
-                <div class="nav-item">
-                    <i class="fas fa-bell"></i>
-                    <p>Chat</p>
-                </div>
-            </a>
         </nav>
 
         <div class="user-info">
-            <img src="profile.jpg" alt="">
+            <img src="./images/profile.jpg" alt="">
             <p>Chikondi Banda</p>
             <a href="">Log out</a>
         </div>
