--- a/Idea_collection_system/static/signup/staff.html
+++ b/Idea_collection_system/static/signup/staff.html
@@ -3,13 +3,13 @@
 
 <head>
       <Title>Sign Up</Title>
-      <link rel="Stylesheet" type="text/css" href="./css/style.css">
+      <link rel="Stylesheet" type="text/css" href="../css/style.css">
       <meta Name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
 
 
 <div class="login">
-      <img class="login-img" src="images/staff.jpg" alt="">
+      <img class="login-img" src="../images/staff.jpg" alt="">
       <div class="login-form">
             <form>
                   <br>
@@ -47,7 +47,7 @@
                   <br>
                   <br>
                   <button type="submit" class="btn">
-                        <a href="profile.html">
+                        <a href="../profile.html">
                               Create Accout
                         </a>
                   </button>
@@ -56,7 +56,7 @@
                   <hr>
                   <ul class="login1">
                         Already have account?
-                        <a href="login.html">
+                        <a href="../login.html">
                               login here!
                         </a>
                   </ul>
