quite some progress

--- a/Idea_collection_system/static/app_management.html
+++ b/Idea_collection_system/static/app_management.html
@@ -9,6 +9,7 @@
     <!-- css file link  -->
     <link rel="stylesheet" href="../css/style.css">
 
+
     <!--========== Fontawesome cdn ==========-->
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -42,12 +43,12 @@
                 </div>
             </a>
             <a href="stats.html">
-                <div class="nav-item">
+                <div class="nav-item nav-stats-link">
                     <p>Stats</p>
                 </div>
             </a>
             <a href="app_management.html">
-                <div class="nav-item active">
+                <div class="nav-item active nav-manage-link">
                     <p>Manage</p>
                 </div>
             </a>
@@ -69,7 +70,7 @@
             <div class="vertical-line"></div>
             <div class="content">
                 <img src="images/profile.jpg" alt="">
-                <p>Chikondi Banda</p>
+                <p class="nav-username">Chikondi Banda</p>
 
                 <a href="login.html" title="Log Out">
                     <i class="fas fa-sign-out-alt"></i>
@@ -321,6 +322,8 @@
         <p class="copyright">&#169 2023 All Rights Reseved</p>
 
     </footer>
+
+    <script src="../js/navbar.js"></script>
 </body>
 
 </html>
