--- a/Idea_collection_system/static/ideas.html
+++ b/Idea_collection_system/static/ideas.html
@@ -9,6 +9,7 @@
     <!-- css file link  -->
     <link rel="stylesheet" href="../css/style.css">
 
+
     <!--========== Fontawesome cdn ==========-->
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -45,12 +46,12 @@
                 </div>
             </a>
             <a href="stats.html">
-                <div class="nav-item">
+                <div class="nav-item nav-stats-link">
                     <p>Stats</p>
                 </div>
             </a>
             <a href="app_management.html">
-                <div class="nav-item">
+                <div class="nav-item nav-manage-link">
                     <p>Manage</p>
                 </div>
             </a>
@@ -72,7 +73,7 @@
             <div class="vertical-line"></div>
             <div class="content">
                 <img src="images/profile.jpg" alt="">
-                <p>Chikondi Banda</p>
+                <p class="nav-username">Chikondi Banda</p>
 
                 <a href="login.html" title="Log Out">
                     <i class="fas fa-sign-out-alt"></i>
@@ -551,14 +552,7 @@
         <p class="copyright">&#169 2023 All Rights Reseved</p>
 
     </footer>
-
+    <script src="../js/navbar.js"></script>
 </body>
 
 </html>
-
-<!---------References
-    w3schools
-    Styling HTML tables with CSS - Web Design/UX Tutorial - https://youtu.be/biI9OFH6Nmg?feature=shared 
-    Custom Select Menu Using HTML, CSS & Javascript - https://youtu.be/NRxSb5hCS58?feature=shared
-    
-    ------------------------------>
