--- a/Idea_collection_system/static/profile.html
+++ b/Idea_collection_system/static/profile.html
@@ -9,6 +9,7 @@
     <!-- css file link  -->
     <link rel="stylesheet" href="../css/style.css">
 
+
     <!--========== Fontawesome cdn ==========-->
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -45,12 +46,12 @@
                 </div>
             </a>
             <a href="stats.html">
-                <div class="nav-item">
+                <div class="nav-item nav-stats-link">
                     <p>Stats</p>
                 </div>
             </a>
             <a href="app_management.html">
-                <div class="nav-item">
+                <div class="nav-item nav-manage-link">
                     <p>Manage</p>
                 </div>
             </a>
@@ -72,7 +73,7 @@
             <div class="vertical-line"></div>
             <div class="content">
                 <img src="images/profile.jpg" alt="">
-                <p>Chikondi Banda</p>
+                <p class="nav-username">Chikondi Banda</p>
 
                 <a href="login.html" title="Log Out">
                     <i class="fas fa-sign-out-alt"></i>
@@ -181,7 +182,7 @@
     </footer>
 
     <script src="./js/profile.js"> </script>
-
+    <script src="../js/navbar.js"></script>
 
 </body>
 
