quite some progress

--- a/Idea_collection_system/static/terms_and_conditions.html
+++ b/Idea_collection_system/static/terms_and_conditions.html
@@ -294,7 +294,7 @@
         <br>
 
         <button class="close1">
-            <a href="ideas.html">
+            <a href="submit.html">
                 <i class="fa fa-times close-btn"></i> Close
             </a>
         </button>
