--- a/Idea_collection_system/static/submit.html
+++ b/Idea_collection_system/static/submit.html
@@ -35,7 +35,7 @@
         <nav class="navbar" id="nav">
 
 
-           
+
             <a href="ideas.html">
                 <div class="nav-item">
                     <p>Ideas</p>
@@ -112,16 +112,16 @@
 
             </div>
             <div class="line"></div>
+
             <div class="content">
-                <textarea name="" id="" cols="30" rows="10"></textarea>
-                <label for="fileToUpload">
-                    <i class="fas fa-paperclip" title="Attach File"></i>
-                </label>
+                <input name="" id="" placeholder="idea title"></input>
+                <textarea name="" id="" placeholder="idea content" cols="30" rows="5"></textarea>
+
             </div>
             <div class="agree">
                 <input class="check" type="checkbox" id="check" onclick="enable()">
                 <label for="check">
-                    I agree to the <a href="terms-and-Condition .html">terms and conditions</a>.
+                    I agree to the <a target="_blank" href="terms_and_conditions.html">terms and conditions</a>.
                 </label>
 
             </div>
@@ -138,6 +138,7 @@
         <div class="info">
             <div class="contact-details">
                 <h2>Contact us</h2>
+                <br>
                 <p>Phone : +2600000000</p>
                 <p>Email : uog.2023.ewsd.group1@gmail.com</p>
                 <br><br>
