quite some progress

--- a/Idea_collection_system/static/ideas.html
+++ b/Idea_collection_system/static/ideas.html
@@ -16,7 +16,7 @@
 
 
     <!-- js file link  -->
-    <script src="../js/script.js"></script>
+    
 
 </head>
 
@@ -554,7 +554,8 @@
         <p class="copyright">&#169 2023 All Rights Reseved</p>
 
     </footer>
-    <script src="../js/navbar.js"></script>
+    <script src="./js/navbar.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
