--- a/Idea_collection_system/static/profile.html
+++ b/Idea_collection_system/static/profile.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <!-- js file link  -->
-    <script src="../js/script.js"></script>
+    
 
 
 </head>
@@ -183,9 +183,9 @@
 
     </footer>
 
-    <script src="./js/profile.js"> </script>
-    <script src="../js/navbar.js"></script>
-
+    <script src="./js/profile.js" async="defer"> </script>
+    <script src="./js/navbar.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
