--- a/Idea_collection_system/static/stats.html
+++ b/Idea_collection_system/static/stats.html
@@ -13,6 +13,7 @@
     <!--========== Fontawesome cdn ==========-->
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
 
@@ -118,7 +119,7 @@
         <nav class="navbar" id="nav">
 
 
-            
+
             <a href="ideas.html">
                 <div class="nav-item">
                     <p>Ideas</p>
