sweet alert integration

--- a/Idea_collection_system/static/signup/qa_coordinator.html
+++ b/Idea_collection_system/static/signup/qa_coordinator.html
@@ -5,6 +5,7 @@
     <Title>Sign Up</Title>
     <link rel="Stylesheet" type="text/css" href="../css/style.css">
     <meta Name="viewport" content="width=device-width,initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 
