--- a/Idea_collection_system/static/login.html
+++ b/Idea_collection_system/static/login.html
@@ -4,6 +4,7 @@
     <Title>Login</Title>
     <link rel="Stylesheet" type="text/css" href="css/style.css">
     <meta Name="viewport" content="width=device-width,initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
     <div class="login">
