--- a/Idea_collection_system/static/signup/staff.html
+++ b/Idea_collection_system/static/signup/staff.html
@@ -4,6 +4,7 @@
 <head>
       <Title>Sign Up</Title>
       <link rel="Stylesheet" type="text/css" href="../css/style.css">
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
       <meta Name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
 
