--- a/Idea_collection_system/static/app_management.html
+++ b/Idea_collection_system/static/app_management.html
@@ -7,7 +7,7 @@
     <title>Application Management</title>
 
     <!-- css file link  -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
 
     <!--========== Fontawesome cdn ==========-->
@@ -326,7 +326,7 @@
 
     </footer>
 
-    <script src="../js/navbar.js"></script>
+    <script src="./js/navbar.js"></script>
 </body>
 
 </html>
