--- a/Idea_collection_system/static/contact.html
+++ b/Idea_collection_system/static/contact.html
@@ -7,7 +7,7 @@
     <title>Contact</title>
 
     <!-- css file link  -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
 
     <!--========== Fontawesome cdn ==========-->
@@ -126,7 +126,7 @@
 
     </footer>
     <script src="./js/navbar.js"></script>
-    <script src="./js/script.js"></script>
+
 </body>
 
 </html>
