--- a/Idea_collection_system/static/ideas.html
+++ b/Idea_collection_system/static/ideas.html
@@ -7,7 +7,7 @@
     <title>Ideas</title>
 
     <!-- css file link  -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
 
     <!--========== Fontawesome cdn ==========-->
@@ -556,7 +556,8 @@
 
     </footer>
     <script src="./js/navbar.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="./js/ideas.js"></script>
+
 </body>
 
 </html>
