--- a/Idea_collection_system/static/profile.html
+++ b/Idea_collection_system/static/profile.html
@@ -7,7 +7,7 @@
     <title>Profile</title>
 
     <!-- css file link  -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
 
     <!--========== Fontawesome cdn ==========-->
@@ -186,7 +186,7 @@
 
     <script src="./js/profile.js" async="defer"> </script>
     <script src="./js/navbar.js"></script>
-    <script src="./js/script.js"></script>
+
 </body>
 
 </html>
