--- a/Idea_collection_system/static/submit.html
+++ b/Idea_collection_system/static/submit.html
@@ -8,7 +8,7 @@
 
 
     <!-- css file link  -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
 
     <!--========== Fontawesome cdn ==========-->
@@ -127,7 +127,7 @@
 
             <div class="content">
                 <input id="idea-title" placeholder="idea title" required></input>
-                <textarea id="idea-content" placeholder="idea content" required cols="30" rows="5"></textarea>
+                <textarea id="idea-content" placeholder="idea content" required cols="30" rows="2"></textarea>
 
             </div>
             <div class="agree">
@@ -165,7 +165,6 @@
 
     <script src="./js/submit_idea.js"></script>
     <script src="./js/navbar.js"></script>
-    <script src="./js/script.js"></script>
 </body>
 
 </html>
