--- a/Idea_collection_system/static/stats.html
+++ b/Idea_collection_system/static/stats.html
@@ -7,101 +7,15 @@
     <title>Statistics</title>
 
     <!-- css file link  -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
 
     <!--========== Fontawesome cdn ==========-->
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-
-
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript">
-        google.charts.load("current", { packages: ['corechart'] });
-        google.charts.setOnLoadCallback(drawCharts);
-        function drawCharts() {
-            //ideas per dept chart
-            var data = google.visualization.arrayToDataTable([
-                ["Department", "Ideas", { role: "style" }],
-                ["School of \nBusiness", 8.94, "#0275b1"],
-                ["School of \nComputing", 10.49, "#0275b1"],
-                ["School of \nFinance", 19.30, "#0275b1"],
-                ["Accounting", 21.45, "#0275b1"]
-            ]);
 
-            var view = new google.visualization.DataView(data);
-            view.setColumns([0, 1,
-                {
-                    calc: "stringify",
-                    sourceColumn: 1,
-                    type: "string",
-                    role: "annotation"
-                },
-                2]);
-
-            var options = {
-                title: "Ideas per Department",
-                width: 600,
-                height: 200,
-                bar: { groupWidth: "90%" },
-                legend: { position: "none" },
-            };
-            var chart = new google.visualization.BarChart(document.getElementById("ideas-numbers"));
-            chart.draw(view, options);
-
-            //draw pie chart
-            var pieData = google.visualization.arrayToDataTable([
-                ['School', 'Ideas per Department'],
-                ['School of business and finance', 11],
-                ['School of Computing', 2],
-                ['School of Accounting', 2],
-                ['School of Social Science', 2],
-                ['School of Finance', 7]
-            ]);
-
-            var pieOptions = {
-                title: 'Ideas per Department (Percentage)',
-                width: 600,
-                height: 200
-            };
-
-            var chart = new google.visualization.PieChart(document.getElementById('piechart'));
-
-            chart.draw(pieData, pieOptions);
-
-            //Contributors per dept chart
-            var data = google.visualization.arrayToDataTable([
-                ["Department", "Ideas", { role: "style" }],
-                ["School of \nBusiness", 8, "#0275b1"],
-                ["School of \nComputing", 10, "#0275b1"],
-                ["School of \nFinance", 19.30, "#0275b1"],
-                ["School of \nAccouting", 21.45, "#0275b1"]
-            ]);
-
-            var view = new google.visualization.DataView(data);
-            view.setColumns([0, 1,
-                {
-                    calc: "stringify",
-                    sourceColumn: 1,
-                    type: "string",
-                    role: "annotation"
-                },
-                2]);
-
-            var options = {
-                title: "Contributors per Department",
-                width: 600,
-                height: 200,
-                bar: { groupWidth: "90%" },
-                legend: { position: "none" },
-            };
-            var chart = new google.visualization.BarChart(document.getElementById("contributor-numbers"));
-            chart.draw(view, options);
-
-        }
-    </script>
 </head>
 
 <body>
@@ -117,8 +31,6 @@
 
 
         <nav class="navbar" id="nav">
-
-
 
             <a href="ideas.html">
                 <div class="nav-item">
@@ -212,7 +124,8 @@
         <p>&#169 2023 All Rights Reseved</p>
 
     </footer>
-    <script src="../js/navbar.js"></script>
+    <script src="./js/navbar.js"></script>
+    <script src="./js/stats.js"></script>
 </body>
 
 </html>
