--- a/Idea_collection_system/static/terms_and_conditions.html
+++ b/Idea_collection_system/static/terms_and_conditions.html
@@ -3,7 +3,7 @@
 
 <head>
     <Title>Terms and Conditions</Title>
-    <link rel="Stylesheet" type="text/css" href="../css/style.css">
+    <link rel="Stylesheet" type="text/css" href="./css/style.css">
     <meta Name="viewport" content="width=device-width,initial-scale=1.0">
 
 
