--- a/Idea_collection_system/static/signup_options.html
+++ b/Idea_collection_system/static/signup_options.html
@@ -24,5 +24,5 @@
 
       </div>
 
-      <script src="./js/signup_options.js"></script>
+      <script defer src="./js/signup_options.js"></script>
 </body>
