--- a/Idea_collection_system/static/ideas.html
+++ b/Idea_collection_system/static/ideas.html
@@ -11,7 +11,7 @@
 
 
     <!--========== Fontawesome cdn ==========-->
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
@@ -555,8 +555,8 @@
         <p class="copyright">&#169 2023 All Rights Reseved</p>
 
     </footer>
-    <script src="./js/navbar.js"></script>
-    <script src="./js/ideas.js"></script>
+    <script defer src="./js/navbar.js"></script>
+    <script defer src="./js/ideas.js"></script>
 
 </body>
 
