--- a/Idea_collection_system/static/profile.html
+++ b/Idea_collection_system/static/profile.html
@@ -11,7 +11,7 @@
 
 
     <!--========== Fontawesome cdn ==========-->
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
@@ -184,8 +184,8 @@
 
     </footer>
 
-    <script src="./js/profile.js" async="defer"> </script>
-    <script src="./js/navbar.js"></script>
+    <script defer src="./js/profile.js"></script>
+    <script defer src="./js/navbar.js"></script>
 
 </body>
 
