--- a/Idea_collection_system/static/stats.html
+++ b/Idea_collection_system/static/stats.html
@@ -11,7 +11,7 @@
 
 
     <!--========== Fontawesome cdn ==========-->
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
@@ -124,8 +124,8 @@
         <p>&#169 2023 All Rights Reseved</p>
 
     </footer>
-    <script src="./js/navbar.js"></script>
-    <script src="./js/stats.js"></script>
+    <script defer src="./js/navbar.js"></script>
+    <script defer src="./js/stats.js"></script>
 </body>
 
 </html>
