--- a/Idea_collection_system/static/submit.html
+++ b/Idea_collection_system/static/submit.html
@@ -12,7 +12,7 @@
 
 
     <!--========== Fontawesome cdn ==========-->
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
@@ -163,8 +163,8 @@
 
     </footer>
 
-    <script src="./js/submit_idea.js"></script>
-    <script src="./js/navbar.js"></script>
+    <script defer src="./js/submit_idea.js"></script>
+    <script defer src="./js/navbar.js"></script>
 </body>
 
 </html>
