--- a/Idea_collection_system/static/comments.html
+++ b/Idea_collection_system/static/comments.html
@@ -106,24 +106,46 @@
         </div>
 
         <div class="idea-list" id="idea-list">
-            
+
+                <div class="comments" id="comments">
+
+                    <div class="horizontal-line"></div>
+                    <h1>Comments</h1>
+                    <div class="comment">
+                        <div class="img">
+                            <img src="images/profile.jpg" alt="">
+                        </div>
+                        <div class="content">
+                            <h3 class="user-name">anonymous</h3>
+
+                            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, necessitatibus
+                                assumenda enim earum aut obcaecati iste dolores totam molestias sed hic ipsa commodi
+                                provident, nostrum saepe ad quis, minus veniam.</p>
+
+                        </div>
+                    </div>
+                    <div class="line"></div>
+                    <div class="comment">
+                        <div class="img">
+                            <img src="images/profile.jpg" alt="">
+                        </div>
+                        <div class="content">
+                            <h3 class="user-name">John Doe</h3>
+
+                            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, necessitatibus
+                                assumenda enim earum aut obcaecati iste dolores totam molestias sed hic ipsa commodi
+                                provident, nostrum saepe ad quis, minus veniam.</p>
+
+                        </div>
+                    </div>
+                    <div class="add-comment">
+                        <input type="text" placeholder="Leave a comment">
+                        <i class="fas fa-paper-plane"></i>
+                    </div>
+                </div>
             </div>
 
-            
-    </section>
 
-    <section class="pagination" id="pagination">
-        <div class="box previous">
-            <i class="fas fa-chevron-left"></i>
-        </div>
-        <div class="box one">1</div>
-        <div class="box two">2</div>
-        <div class="box three">3</div>
-        <div class="box dots">...</div>
-        <div class="box last">11</div>
-        <div class="box next">
-            <i class="fas fa-chevron-right"></i>
-        </div>
     </section>
 
 
@@ -144,7 +166,7 @@
 
     </footer>
     <script defer src="./js/navbar.js"></script>
-    <script defer src="./js/ideas.js"></script>
+    <script defer src="./js/comments.js"></script>
 
 </body>
 
