--- a/Idea_collection_system/static/contact.html
+++ b/Idea_collection_system/static/contact.html
@@ -102,7 +102,8 @@
 
                 </div>
 
-                <textarea name="message" type="message" id="contact-message" rows="5" placeholder="Message" required></textarea>
+                <textarea name="message" type="message" id="contact-message" rows="5" placeholder="Message"
+                    required></textarea>
                 <button type="button" id='send-email-btn' class="button send-btn">Send</button>
             </div>
             <br>
