--- a/Idea_collection_system/static/profile.html
+++ b/Idea_collection_system/static/profile.html
@@ -116,9 +116,13 @@
         <br>
         <br>
 
+        <div class="anonymous-setting-switch">
+
+        </div>
+
         <div class="edit-form">
             <form class="form">
-                <h2>Edit Details</h2>
+                <h2>Edit Account Details</h2>
                 <br>
 
                 <br>
