--- a/Idea_collection_system/static/signup/qa_coordinator.html
+++ b/Idea_collection_system/static/signup/qa_coordinator.html
@@ -37,11 +37,11 @@
                 <input id="confirm_password" type="password" placeholder="Enter your Password again" name="psw"
                     required>
                 <br>
-                
+
                 <label for="psw" style="text-align:center;font-size:15PX;"><b>High privilege signup key</b></label>
                 <input id="high_priv_key" type="password" placeholder="High privilege signup key"
                     name="High privilege signup key" required>
-                    <br>
+                <br>
                 <label for="psw" style="text-align:center;font-size:15PX;"><b>Department : </b></label>
                 <br>
 
@@ -52,7 +52,7 @@
                     <option value="4" label="Department of social science and technology">
                 </select>
 
-                
+
                 <br>
                 <br>
                 <button type="button" class="btn" id="qa_coordinator_signup_btn">
@@ -71,5 +71,5 @@
         </div>
 
     </div>
-    <script src="../js/qa_coordinator_signup.js"></script>
+    <script defer src="../js/qa_coordinator_signup.js"></script>
 </body>
