--- a/Idea_collection_system/static/signup/qa_manager.html
+++ b/Idea_collection_system/static/signup/qa_manager.html
@@ -38,7 +38,8 @@
                     required>
                 <br>
                 <label for="psw" style="text-align:center;font-size:15PX;"><b>High privilege signup key</b></label>
-                <input id="high_priv_key" type="password" placeholder="High privilege signup key" name="High privilege signup key" required>
+                <input id="high_priv_key" type="password" placeholder="High privilege signup key"
+                    name="High privilege signup key" required>
                 <br>
                 <button type="button" class="btn" id="qa_manager_signup_btn">
                     Create Account
@@ -56,5 +57,5 @@
         </div>
 
     </div>
-    <script src="../js/qa_manager_signup.js"></script>
+    <script defer src="../js/qa_manager_signup.js"></script>
 </body>
