--- a/Idea_collection_system/static/submit.html
+++ b/Idea_collection_system/static/submit.html
@@ -98,7 +98,7 @@
             <div class="info">
                 <p></p>
                 <div class="tag">
-                    <label for="tag"><b>Category: </b></label>
+                    <label><b>Category: </b></label>
                     <br>
 
                     <select id="categories">
@@ -110,7 +110,7 @@
                     <br>
                 </div>
                 <div class="tag">
-                    <label for="tag"><b>Anonymous Post: </b></label>
+                    <label><b>Anonymous Post: </b></label>
                     <br>
 
                     <select id="anonymous">
