document uploading and downloading done

--- a/Idea_collection_system/static/app_management.html
+++ b/Idea_collection_system/static/app_management.html
@@ -327,6 +327,7 @@
     </footer>
 
     <script defer src="./js/navbar.js"></script>
+    <script defer src="./js/app_management.js"></script>
 </body>
 
 </html>
