--- a/Idea_collection_system/static/submit.html
+++ b/Idea_collection_system/static/submit.html
@@ -127,8 +127,18 @@
             <div class="content">
                 <input id="idea-title" placeholder="idea title" required></input>
                 <textarea id="idea-content" placeholder="idea content" required cols="30" rows="2"></textarea>
-
+                
             </div>
+
+            <div class="content">
+                <br>
+                <label for="myfile">Upload A Supporting Document (optional):</label>
+                <input type="file" id="Documents" name="myfile" accept=
+                ".xlsx,.xls,image/*,.doc, .docx,.ppt, .pptx,.txt,.pdf"/>
+                <br>
+                <br>
+            </div>
+
             <div class="agree">
                 <input class="check" type="checkbox" id="check" onclick="enable()">
                 <label for="check">
