--- a/Idea_collection_system/static/ideas.html
+++ b/Idea_collection_system/static/ideas.html
@@ -90,7 +90,7 @@
 
 
     <section class="ideas">
-        <div class="view-by" id="view-by">
+        <div class="view-by">
             <div class="dropdown">
                 <label for="filter" style="padding-right: 10px;"><b>View By: </b></label>
                 <select id="viewby">
