finished quite some

--- a/Idea_collection_system/static/profile.html
+++ b/Idea_collection_system/static/profile.html
@@ -104,7 +104,7 @@
 
             </div>
             <div class="login-details">
-                <p class="login" id="last_log_in"><i class="far fa-clock"></i> Last Login: 17th October, 2023</p>
+                <p class="login" id="last_log_in"><i class="far fa-clock"></i>Last Login Date : 17th October, 2023</p>
             </div>
 
 
