--- a/Idea_collection_system/static/stats.html
+++ b/Idea_collection_system/static/stats.html
@@ -48,7 +48,7 @@
                 </div>
             </a>
             <a href="submit.html">
-                <div class="nav-item">
+                <div class="nav-item nav-submit-link">
                     <p>Submit-Idea</p>
                 </div>
             </a>
@@ -72,7 +72,7 @@
                 <img src="images/profile.jpg" alt="">
                 <p class="nav-username">Chikondi Banda</p>
 
-                <a href="login.html" title="Log Out">
+                <a href="login.html" title="Log Out" id="logout-btn">
                     <i class="fas fa-sign-out-alt"></i>
                 </a>
 
@@ -101,13 +101,13 @@
             <div class="reports">
                 <h2>Exception Reports</h2>
                 <br>
-                <p class="number-comment">30</p>
+                <p class="number-comment" id="ideas-without-comments">30</p>
                 <p>Ideas without commentss</p>
                 <br>
-                <p class="number-comment">15</p>
+                <p class="number-comment" id="anonymous-ideas">15</p>
                 <p>Anonymous Posts</p>
                 <br>
-                <p class="number-comment">5</p>
+                <p class="number-comment" id="anonymous-comments">5</p>
                 <p>Anonymous comments</p>
             </div>
 
