--- a/Idea_collection_system/static/app_management.html
+++ b/Idea_collection_system/static/app_management.html
@@ -50,7 +50,7 @@
                 </div>
             </a>
             <a href="submit.html">
-                <div class="nav-item">
+                <div class="nav-item nav-submit-link">
                     <p>Submit-Idea</p>
                 </div>
             </a>
@@ -74,7 +74,7 @@
                 <img src="images/profile.jpg" alt="">
                 <p class="nav-username">Chikondi Banda</p>
 
-                <a href="login.html" title="Log Out">
+                <a href="login.html" title="Log Out" id="logout-btn">
                     <i class="fas fa-sign-out-alt"></i>
                 </a>
 
