--- a/Idea_collection_system/static/profile.html
+++ b/Idea_collection_system/static/profile.html
@@ -53,7 +53,7 @@
                 </div>
             </a>
             <a href="submit.html">
-                <div class="nav-item">
+                <div class="nav-item nav-submit-link">
                     <p>Submit-Idea</p>
                 </div>
             </a>
@@ -77,7 +77,7 @@
                 <img src="images/profile.jpg" alt="">
                 <p class="nav-username">Chikondi Banda</p>
 
-                <a href="login.html" title="Log Out">
+                <a href="login.html" title="Log Out" id="logout-btn">
                     <i class="fas fa-sign-out-alt"></i>
                 </a>
 
