added dummy data

--- a/Idea_collection_system/static/stats.html
+++ b/Idea_collection_system/static/stats.html
@@ -101,13 +101,13 @@
             <div class="reports">
                 <h2>Exception Reports</h2>
                 <br>
-                <p class="number-comment" id="ideas-without-comments">30</p>
-                <p>Ideas without commentss</p>
+                <p class="number-comment" id="ideas-without-comments">No data</p>
+                <p>Ideas without comments</p>
                 <br>
-                <p class="number-comment" id="anonymous-ideas">15</p>
+                <p class="number-comment" id="anonymous-ideas">No data</p>
                 <p>Anonymous Posts</p>
                 <br>
-                <p class="number-comment" id="anonymous-comments">5</p>
+                <p class="number-comment" id="anonymous-comments">No data</p>
                 <p>Anonymous comments</p>
             </div>
 
